Fix crash in peer authentication cleanup

BUG: 266622